--- a/app/index.html
+++ b/app/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>my angular app</title>
+  <link rel="stylesheet" href="lib/jQuery/jquery-ui-1.8.12.custom.css"/>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
-<body>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
+<body ng:controller="TabsSampleCtrl">
 
-  <ng:view></ng:view>
+  <div my:tabs="persons">
+    <div class="template">template</div>
+  </div>
 
+  <script src="lib/jQuery/jquery-1.5.1.min.js"></script>
+  <script src="lib/jQuery/jquery-ui-1.8.12.custom.min.js"></script>
   <script src="lib/angular/angular.js" ng:autobind></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
