add/remove buttons and functions

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,10 @@
   <div my:tabs="persons">
     <div class="template">template</div>
   </div>
+  <div>
+    <button ng:click="addPerson()">add person</button>
+    <button ng:click="delPerson()">del person</button>
+  </div>
 
   <script src="lib/jQuery/jquery-1.5.1.min.js"></script>
   <script src="lib/jQuery/jquery-ui-1.8.12.custom.min.js"></script>
